# BAE_V1

./: .gitignore  E01_pdf_to_text.py  E02_Chunking.py  E03_Embeddings.py  E04_RAG_queries.py  README.md  config.py  main.py  pyproject.toml
config/: FSP-CORSAIR-ONE_cfg.yaml  WX-OR6246656_cfg.yaml  cfg.yaml
